fixes field component alignment

--- a/ui/field.reel/_field.css
+++ b/ui/field.reel/_field.css
@@ -20,6 +20,7 @@
 .Field-title,
 .Field-control {
     display: inline-block;
+    vertical-align: top;
 }
 
 /* Title */
@@ -28,8 +29,8 @@
     font-weight: 300;
     line-height: 1.25em;
     width: var(--fieldtitleWidth);
-    padding-right: 1.5em;
-    margin-top: .3em;
+    padding-right: 1.5rem;
+    padding-top: .35rem;
     color: rgba(255,255,255,.8);
     transition: opacity .25s;
 }
@@ -40,8 +41,9 @@
 
 .Field-control {
     width: calc(100% - var(--fieldtitleWidth));
+    /* makes up for inline block space */
     margin-left: -.285rem;
-    max-width: 15em;
+    max-width: 16em;
 }
 
 /* Field-info */
